Fix the ratings resize for expand/collapse view

--- a/public/stylesheets/sass/talking_point.sass
+++ b/public/stylesheets/sass/talking_point.sass
@@ -111,6 +111,8 @@ div.talking_point_body
 	p.talking_point
 		font-size: 1.28em
 	div.talking_point_controls
+		p
+			margin-top: -4px
 		p.coms
 			float: left
 		p.other
